WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
43635
[Qt] Flash content can not be displayed by Symbian Flash Player
https://bugs.webkit.org/show_bug.cgi?id=43635
Summary
[Qt] Flash content can not be displayed by Symbian Flash Player
Hui Huang
Reported
2010-08-06 12:30:23 PDT
Created
attachment 63751
[details]
Simplified test content for test case reduction Flash content is not displayed by Symiban Flash Player on Nokia S60 Simulator. I'm using Webkit with Qt. Simplified test content is attached as test_case.zip.
Attachments
Simplified test content for test case reduction
(23.10 KB, application/zip)
2010-08-06 12:30 PDT
,
Hui Huang
no flags
Details
Proposed patch
(1.23 KB, patch)
2010-08-06 15:30 PDT
,
Hui Huang
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Hui Huang
Comment 1
2010-08-06 15:30:06 PDT
Created
attachment 63770
[details]
Proposed patch When plug-in is being created, m_windowRect is not updated in updatePluginWidget because the parent of PluginView is not set: void PluginView::updatePluginWidget() { if (!parent()) return; ... Plug-in gets wrong window size (both height and width are 0) on setwindow. Flash content is not displayed. Calling updatePluginWidget() after plug-in is successfully loaded in PluginView::setParent fixed the problem. The proposed patch was tested successfully on S60 emulator.
Hui Huang
Comment 2
2010-08-09 13:10:35 PDT
Per Yael's suggestion, I'm checking recent changesets to see if this has already been fixed.
Hui Huang
Comment 3
2010-08-09 15:29:25 PDT
Tried changesets 61505, 62159, 62184, and 62185 with no luck.
Hui Huang
Comment 4
2010-08-10 08:25:06 PDT
I will try Webkit trunk. If this has been fixed in trunk, need to find out by which patch.
Eric Seidel (no email)
Comment 5
2010-08-12 07:21:45 PDT
Comment on
attachment 63770
[details]
Proposed patch rs=me.
Hui Huang
Comment 6
2010-08-12 08:07:12 PDT
Eric, thanks a lot for reviewing the patch.
WebKit Commit Bot
Comment 7
2010-08-12 08:58:54 PDT
Comment on
attachment 63770
[details]
Proposed patch Clearing flags on attachment: 63770 Committed
r65249
: <
http://trac.webkit.org/changeset/65249
>
WebKit Commit Bot
Comment 8
2010-08-12 08:59:00 PDT
All reviewed patches have been landed. Closing bug.
Simon Hausmann
Comment 9
2010-08-13 08:11:27 PDT
Revision
r65249
cherry-picked into qtwebkit-2.1 with commit 4c848c81bcb0879a1ab74e3b7c37339a80beb201
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug