2010-08-12  Hui Huang  <hui.2.huang@nokia.com>

Reviewed by Eric Seidel.

        m_windowRect is not updated because parent of PluginView is not
        set when updatePluginWidget is called. plugin gets wrong window
        size on setwindow.
        https://bugs.webkit.org/show_bug.cgi?id=43635

        * plugins/symbian/PluginViewSymbian.cpp:
        (WebCore::PluginView::setParent):

Canonical link: https://commits.webkit.org/56049@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65249 268f45cc-cd09-0410-ab3c-d52691b4dbfc