WebCore/plugins/symbian/PluginViewSymbian.cpp
@@ -242,8 +242,11 @@ void PluginView::setParent(ScrollView* parent)
 {
     Widget::setParent(parent);
 
-    if (parent)
+    if (parent) {
         init();
+        if (m_status == PluginStatusLoadedSuccessfully)
+            updatePluginWidget();
+    }
 }
 
 void PluginView::setNPWindowRect(const IntRect&)
